--- a/Proyecto/1_inicio_hotel/ASSETS/CSS/css_servicios/style_servicios.css
+++ b/Proyecto/1_inicio_hotel/ASSETS/CSS/css_servicios/style_servicios.css
@@ -4,3 +4,118 @@ body{
     background-repeat: no-repeat;
     background-attachment: fixed;
 }
+div.logy{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    text-align: left;
+    align-items: flex-start;
+    height: 40px;
+
+}
+
+div.tema{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    font-family: Arial, Helvetica, sans-serif;
+    background-color: rgb(103, 93, 124);
+    margin-left: 25%;
+    height: 55%;
+    border-style: groove;
+    border: 4px groove rgb(255, 197, 139);
+    
+  
+}
+
+div.semi > p{
+    text-align: center;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(51, 45, 85);
+}
+
+div.semi{
+    background-color: bisque;
+    height: 120%;
+}
+
+div.final{
+    background-color: rgb(103, 93, 124);
+}
+
+h4{
+    text-align: center;
+    font-family: Arial, Helvetica, sans-serif;
+    color: cornsilk;
+    height: 6%;  
+
+}
+div.fin{
+    background-color: black;
+    color: cornsilk;
+    text-align: center;
+}
+
+#menu ul a {
+    display:block;
+    color:#fff;
+    text-decoration:none;
+    font-weight:400;
+    font-size:15px;
+    padding:10px;
+    font-family:Arial, Helvetica, sans-serif;
+    text-transform:uppercase;
+    letter-spacing:1px;
+}
+#menu{
+    margin-left: -470px;
+}
+   
+ 
+#menu ul li {
+    position:relative;
+    float:left;
+    margin:0;
+    padding:0;
+    font-family: cursive;
+    color: rgb(236, 205, 101); 
+    font-size: 22px; 
+    list-style-type: none;
+}
+
+#menu ul li:hover {
+    background-color: rgba(255, 217, 0, 0.644);
+}
+   
+
+#menu ul ul {
+    display:none;
+    position:absolute;
+    top:100%;
+    left:0;
+    background:#eee;
+    padding:0;
+}
+   
+  
+   
+#menu ul ul li {
+    float:none;
+    width:250px
+}
+   
+
+   
+#menu ul ul a {
+    line-height:120%;
+    padding:10px 15px;
+}
+   
+
+   
+#menu ul li:hover > ul {
+    display:block;
+    box-shadow: 0px 0px 40px 5px gold ;
+}
