--- a/Proyecto/1_inicio_hotel/ASSETS/CSS/css_servicios/style_servicios.css
+++ b/Proyecto/1_inicio_hotel/ASSETS/CSS/css_servicios/style_servicios.css
@@ -114,16 +114,31 @@ div.semi{
 }
 
 div.final{
-    position: static;
+    position: relative;
     background-color: rgb(103, 93, 124);
+}
+
+h3{
+    text-align: center;
+    color: rgb(87, 58, 94);
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 26px;
+
 }
 
 h4{
     text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 22px;
     color: cornsilk;
 
+}
+
+h5{
+    text-align: center;
+    color: blanchedalmond;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 18px;
 }
 div.fin{
     background-color: black;
